fix: removing overflow

--- a/src/components/FilterOption/FilterOption.module.scss
+++ b/src/components/FilterOption/FilterOption.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  overflow: hidden;
   height: fit-content;
   transition: all 1s ease-in;
 
